# simple-api-examples

python-fastapi-simple-api/: .gitignore  pyproject.toml
python-fastapi-simple-api/python_simple_api/: controller.py  models.py
python-fastapi-simple-api/tests/: test_controller.py  test_models.py
spring-simple-api/: build.gradle  settings.gradle
spring-simple-api/src/main/java/me/oyurimatheus/spring_simple_api/: SpringSimpleApiApplication.java
spring-simple-api/src/main/resources/: application.properties
spring-simple-api/src/test/java/me/oyurimatheus/spring_simple_api/: SpringSimpleApiApplicationTests.java
